# threadslapper-aps

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
config/: example_config.yml
src/cogs/: RssWatcher.py
src/threadslapper/: __init__.py  discordbot.py  settings.py
